<resources>
    <string name="app_name">Pengubah Mata Uang</string>
    <string name="choose_currency">Pilih Mata Uang :</string>
    <string name="currency_value">Nilai Mata Uang</string>
    <string name="convert">Konversi</string>
    <string name="rupiah_value">Konversi Rupiah : %s</string>
    <string name="euro">Euro</string>
    <string name="us_dollar">US Dollar</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="saudi_riyal">Saudi Riyal</string>
</resources>