<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_currency_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/currencyGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_choose"
            app:srcCompat="@drawable/ic_swap" />

        <TextView
            android:id="@+id/text_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="32dp"
            android:text="@string/choose_currency"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.PengubahMataUang.TextView"/>

        <RadioGroup
            android:id="@+id/currencyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/text_choose"
            app:layout_constraintTop_toBottomOf="@+id/text_choose"
            style="@style/Widget.PengubahMataUang.CompoundButton.RadioButton">

            <RadioButton
                android:id="@+id/euro_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/usd_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/us_dollar" />

            <RadioButton
                android:id="@+id/yen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/japanese_yen" />

            <RadioButton
                android:id="@+id/riyal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saudi_riyal" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/currencyGroup"
            app:layout_constraintTop_toBottomOf="@+id/currencyGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nilai_mata_uang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currency_value"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/convert_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/convert"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/text_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rupiah_value"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/convert_button"
            app:layout_constraintTop_toBottomOf="@+id/convert_button"
            tools:text="Nilai Rupiah: "
            style="@style/Widget.PengubahMataUang.TextView"/>

        <ImageView
            android:id="@+id/icon_currency_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@drawable/ic_currency_exchange"
            android:importantForAccessibility="no"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>